Finished week 1 assignment where I added images, facts about myself, and links to external sites

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,9 +8,18 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
+      <h1>Zindzi Griffin's Portfolio</h1>
+      <img src="/images/PortfolioIMG.jpg" width="200" height="200"class= "center"/>
+      <p>Hi everyone, my name is Zindzi. I am a sophomore computer science major at Spelman College. </p>
+      <p>I am interested in software engineering and UX research. My main goals with studying computer science are to change the face of technology using my computing skills. I hope to bridge the gap between race and gender gap in the tech space and create a space that is more inclusive of everyone.
+      </p>
+      <p>I started studying computer science because I was interested in problem-solving and how I can use computer science to solve issues.I love being able to express my creativity through computer science. I hope to inspire other young girls to study computer science.</p> 
+      <h3>Software Engineering Projects</h3>
+      <p>Anagram: I created a GUI game vrsion of anagrams.</p>
+      <p>CareerGirls IOS mobile app: I helped create an IOS mobile app for an organization, Career Girls. The purpose of the app is to inspire young girls to pursue careers in STEM.</p>
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
+      <a href="https://www.linkedin.com/in/zindzi-griffin-6b7673140/">Linkedin</a>
+      <a href="https://github.com/zindzigriffin">Github</a>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
