Completed Step 2 (Fetch)

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -17,11 +17,18 @@
       <h3>Software Engineering Projects</h3>
       <p>Anagram: I created a GUI game vrsion of anagrams.</p>
       <p>CareerGirls IOS mobile app: I helped create an IOS mobile app for an organization, Career Girls. The purpose of the app is to inspire young girls to pursue careers in STEM.</p>
-      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
+      <p>Click <a href="/My-Portfolio">here</a> to see content created by server code.</p>
       <a href="https://www.linkedin.com/in/zindzi-griffin-6b7673140/">Linkedin</a>
       <a href="https://github.com/zindzigriffin">Github</a>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
+      <h1>Server Example</h1>
+      <p>Click this button to see a random message about butterflies.</p>
+      <button onclick="showServerTime();">
+        Get random message
+      </button>
+      <p id="text-container"></p>
+      <p id="date-container"></p>
       <div id="greeting-container"></div>
     </div>
   </body>
