--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>My Portfolio</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_DnkO7r8q8kVCZXosyVuTLnVer3eKHuM"></script>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
@@ -32,4 +33,8 @@
       <div id="greeting-container"></div>
     </div>
   </body>
+  <body onload="createMap();">
+    <h1>Hello Google Maps</h1>
+    <div id="map"></div>
+</body>
 </html>
